Proyecto/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'SELECT'", "'FROM'", "'WHERE'", "'INSERT'", 
                     "'INTO'", "'VALUES'", "'UPDATE'", "'SET'", "'DELETE'", 
                     "'CREATE'", "'TABLE'", "'DATABASE'", "'USE'", "'GO'", 
                     "'CONSTRAINT'", "'IDENTITY'", "'ALTER'", "'ADD'", "'DROP'", 
                     "'TOP'", "'LIKE'", "'IN'", "'BETWEEN'", "'IS'", "'PRIMARY'", 
                     "'KEY'", "'FOREIGN'", "'REFERENCES'", "'NOT'", "'NULL'", 
                     "'UNIQUE'", "'CHECK'", "'DEFAULT'", "'JOIN'", "'INNER'", 
                     "'LEFT'", "'RIGHT'", "'ON'", "'FOR'", "'DISTINCT'", 
                     "'GROUP'", "'BY'", "'ORDER'", "'ASC'", "'DESC'", "'AND'", 
                     "'OR'", "'COUNT'", "'SUM'", "'AVG'", "'MIN'", "'MAX'", 
                     "'BEGIN'", "'TRANSACTION'", "'COMMIT'", "'ROLLBACK'", 
                     "'PROCEDURE'", "'TRIGGER'", "'EXEC'", "'AS'", "'INT'", 
                     "'BIGINT'", "'SMALLINT'", "'TINYINT'", "'BIT'", "'DATE'", 
                     "'DATETIME'", "'DECIMAL'", "'VARCHAR'", "'CHAR'", "'TRUE'", 
                     "'FALSE'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", 
                     "'('", "')'", "','", "';'", "'*'", "'.'" ]

    symbolicNames = [ "<INVALID>", "SELECT", "FROM", "WHERE", "INSERT", 
                      "INTO", "VALUES", "UPDATE", "SET", "DELETE", "CREATE", 
                      "TABLE", "DATABASE", "USE", "GO", "CONSTRAINT", "IDENTITY", 
                      "ALTER", "ADD", "DROP", "TOP", "LIKE", "IN", "BETWEEN", 
                      "IS", "PRIMARY", "KEY", "FOREIGN", "REFERENCES", "NOT", 
                      "NULL", "UNIQUE", "CHECK", "DEFAULT", "JOIN", "INNER", 
                      "LEFT", "RIGHT", "ON", "FOR", "DISTINCT", "GROUP", 
                      "BY", "ORDER", "ASC", "DESC", "AND", "OR", "COUNT", 
                      "SUM", "AVG", "MIN", "MAX", "BEGIN", "TRANSACTION", 
                      "COMMIT", "ROLLBACK", "PROCEDURE", "TRIGGER", "EXEC", 
                      "AS", "INT", "BIGINT", "SMALLINT", "TINYINT", "BIT", 
                      "DATE", "DATETIME", "DECIMAL", "VARCHAR", "CHAR", 
                      "TRUE", "FALSE", "EQ", "NEQ", "LT", "GT", "LE", "GE", 
                      "LPAREN", "RPAREN", "COMA", "PT_COMA", "STAR", "PUNTO", 
                      "IDT", "NUM", "CAD", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_root = 0
    RULE_statement = 1
    RULE_selectStatement = 2
    RULE_selectList = 3
    RULE_tableReference = 4
    RULE_alias = 5
    RULE_insertStatement = 6
    RULE_updateStatement = 7
    RULE_assignmentList = 8
    RULE_assignment = 9
    RULE_deleteStatement = 10
    RULE_createTableStatement = 11
    RULE_tableElement = 12
    RULE_columnDefinition = 13
    RULE_identityClause = 14
    RULE_nullClause = 15
    RULE_dataType = 16
    RULE_constraint = 17
    RULE_columnConstraint = 18
    RULE_tableConstraint = 19
    RULE_whereClause = 20
    RULE_joinClause = 21
    RULE_groupByClause = 22
    RULE_orderByClause = 23
    RULE_condition = 24
    RULE_comparator = 25
    RULE_expression = 26
    RULE_aggregateFunction = 27
    RULE_columnList = 28
    RULE_valueList = 29
    RULE_value = 30
    RULE_createProcedureStatement = 31
    RULE_createTriggerStatement = 32
    RULE_beginTransactionStatement = 33
    RULE_commitStatement = 34
    RULE_rollbackStatement = 35

    ruleNames =  [ "root", "statement", "selectStatement", "selectList", 
                   "tableReference", "alias", "insertStatement", "updateStatement", 
                   "assignmentList", "assignment", "deleteStatement", "createTableStatement", 
                   "tableElement", "columnDefinition", "identityClause", 
                   "nullClause", "dataType", "constraint", "columnConstraint", 
                   "tableConstraint", "whereClause", "joinClause", "groupByClause", 
                   "orderByClause", "condition", "comparator", "expression", 
                   "aggregateFunction", "columnList", "valueList", "value", 
                   "createProcedureStatement", "createTriggerStatement", 
                   "beginTransactionStatement", "commitStatement", "rollbackStatement" ]

    EOF = Token.EOF
    SELECT=1
    FROM=2
    WHERE=3
    INSERT=4
    INTO=5
    VALUES=6
    UPDATE=7
    SET=8
    DELETE=9
    CREATE=10
    TABLE=11
    DATABASE=12
    USE=13
    GO=14
    CONSTRAINT=15
    IDENTITY=16
    ALTER=17
    ADD=18
    DROP=19
    TOP=20
    LIKE=21
    IN=22
    BETWEEN=23
    IS=24
    PRIMARY=25
    KEY=26
    FOREIGN=27
    REFERENCES=28
    NOT=29
    NULL=30
    UNIQUE=31
    CHECK=32
    DEFAULT=33
    JOIN=34
    INNER=35
    LEFT=36
    RIGHT=37
    ON=38
    FOR=39
    DISTINCT=40
    GROUP=41
    BY=42
    ORDER=43
    ASC=44
    DESC=45
    AND=46
    OR=47
    COUNT=48
    SUM=49
    AVG=50
    MIN=51
    MAX=52
    BEGIN=53
    TRANSACTION=54
    COMMIT=55
    ROLLBACK=56
    PROCEDURE=57
    TRIGGER=58
    EXEC=59
    AS=60
    INT=61
    BIGINT=62
    SMALLINT=63
    TINYINT=64
    BIT=65
    DATE=66
    DATETIME=67
    DECIMAL=68
    VARCHAR=69
    CHAR=70
    TRUE=71
    FALSE=72
    EQ=73
    NEQ=74
    LT=75
    GT=76
    LE=77
    GE=78
    LPAREN=79
    RPAREN=80
    COMA=81
    PT_COMA=82
    STAR=83
    PUNTO=84
    IDT=85
    NUM=86
    CAD=87
    LINE_COMMENT=88
    BLOCK_COMMENT=89
    WS=90

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 117093590311634578) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectStatement(self):
            return self.getTypedRuleContext(ExprParser.SelectStatementContext,0)


        def PT_COMA(self):
            return self.getToken(ExprParser.PT_COMA, 0)

        def insertStatement(self):
            return self.getTypedRuleContext(ExprParser.InsertStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(ExprParser.UpdateStatementContext,0)


        def deleteStatement(self):
            return self.getTypedRuleContext(ExprParser.DeleteStatementContext,0)


        def createTableStatement(self):
            return self.getTypedRuleContext(ExprParser.CreateTableStatementContext,0)


        def createProcedureStatement(self):
            return self.getTypedRuleContext(ExprParser.CreateProcedureStatementContext,0)


        def createTriggerStatement(self):
            return self.getTypedRuleContext(ExprParser.CreateTriggerStatementContext,0)


        def beginTransactionStatement(self):
            return self.getTypedRuleContext(ExprParser.BeginTransactionStatementContext,0)


        def commitStatement(self):
            return self.getTypedRuleContext(ExprParser.CommitStatementContext,0)


        def rollbackStatement(self):
            return self.getTypedRuleContext(ExprParser.RollbackStatementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.selectStatement()
                self.state = 82
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 81
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.insertStatement()
                self.state = 86
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 85
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.updateStatement()
                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.deleteStatement()
                self.state = 94
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.createTableStatement()
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.createProcedureStatement()
                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 104
                self.createTriggerStatement()
                self.state = 106
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 108
                self.beginTransactionStatement()
                self.state = 110
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 109
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 112
                self.commitStatement()
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.match(ExprParser.PT_COMA)


                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 116
                self.rollbackStatement()
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 117
                    self.match(ExprParser.PT_COMA)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(ExprParser.SELECT, 0)

        def selectList(self):
            return self.getTypedRuleContext(ExprParser.SelectListContext,0)


        def FROM(self):
            return self.getToken(ExprParser.FROM, 0)

        def tableReference(self):
            return self.getTypedRuleContext(ExprParser.TableReferenceContext,0)


        def DISTINCT(self):
            return self.getToken(ExprParser.DISTINCT, 0)

        def joinClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.JoinClauseContext)
            else:
                return self.getTypedRuleContext(ExprParser.JoinClauseContext,i)


        def whereClause(self):
            return self.getTypedRuleContext(ExprParser.WhereClauseContext,0)


        def groupByClause(self):
            return self.getTypedRuleContext(ExprParser.GroupByClauseContext,0)


        def orderByClause(self):
            return self.getTypedRuleContext(ExprParser.OrderByClauseContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_selectStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStatement" ):
                listener.enterSelectStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStatement" ):
                listener.exitSelectStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStatement" ):
                return visitor.visitSelectStatement(self)
            else:
                return visitor.visitChildren(self)




    def selectStatement(self):

        localctx = ExprParser.SelectStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_selectStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(ExprParser.SELECT)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 123
                self.match(ExprParser.DISTINCT)


            self.state = 126
            self.selectList()
            self.state = 127
            self.match(ExprParser.FROM)
            self.state = 128
            self.tableReference()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 257698037760) != 0):
                self.state = 129
                self.joinClause()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 135
                self.whereClause()


            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 138
                self.groupByClause()


            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 141
                self.orderByClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(ExprParser.STAR, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_selectList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectList" ):
                listener.enterSelectList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectList" ):
                listener.exitSelectList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectList" ):
                return visitor.visitSelectList(self)
            else:
                return visitor.visitChildren(self)




    def selectList(self):

        localctx = ExprParser.SelectListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selectList)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [83]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(ExprParser.STAR)
                pass
            elif token in [30, 48, 49, 50, 51, 52, 71, 72, 85, 86, 87]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.expression()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==81:
                    self.state = 146
                    self.match(ExprParser.COMA)
                    self.state = 147
                    self.expression()
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDT(self):
            return self.getToken(ExprParser.IDT, 0)

        def alias(self):
            return self.getTypedRuleContext(ExprParser.AliasContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_tableReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableReference" ):
                listener.enterTableReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableReference" ):
                listener.exitTableReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableReference" ):
                return visitor.visitTableReference(self)
            else:
                return visitor.visitChildren(self)




    def tableReference(self):

        localctx = ExprParser.TableReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tableReference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ExprParser.IDT)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==85:
                self.state = 156
                self.alias()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDT(self):
            return self.getToken(ExprParser.IDT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlias" ):
                return visitor.visitAlias(self)
            else:
                return visitor.visitChildren(self)




    def alias(self):

        localctx = ExprParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(ExprParser.IDT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(ExprParser.INSERT, 0)

        def INTO(self):
            return self.getToken(ExprParser.INTO, 0)

        def tableReference(self):
            return self.getTypedRuleContext(ExprParser.TableReferenceContext,0)


        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LPAREN)
            else:
                return self.getToken(ExprParser.LPAREN, i)

        def columnList(self):
            return self.getTypedRuleContext(ExprParser.ColumnListContext,0)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RPAREN)
            else:
                return self.getToken(ExprParser.RPAREN, i)

        def VALUES(self):
            return self.getToken(ExprParser.VALUES, 0)

        def valueList(self):
            return self.getTypedRuleContext(ExprParser.ValueListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_insertStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStatement" ):
                listener.enterInsertStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStatement" ):
                listener.exitInsertStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStatement" ):
                return visitor.visitInsertStatement(self)
            else:
                return visitor.visitChildren(self)




    def insertStatement(self):

        localctx = ExprParser.InsertStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_insertStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(ExprParser.INSERT)
            self.state = 162
            self.match(ExprParser.INTO)
            self.state = 163
            self.tableReference()
            self.state = 164
            self.match(ExprParser.LPAREN)
            self.state = 165
            self.columnList()
            self.state = 166
            self.match(ExprParser.RPAREN)
            self.state = 167
            self.match(ExprParser.VALUES)
            self.state = 168
            self.match(ExprParser.LPAREN)
            self.state = 169
            self.valueList()
            self.state = 170
            self.match(ExprParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(ExprParser.UPDATE, 0)

        def tableReference(self):
            return self.getTypedRuleContext(ExprParser.TableReferenceContext,0)


        def SET(self):
            return self.getToken(ExprParser.SET, 0)

        def assignmentList(self):
            return self.getTypedRuleContext(ExprParser.AssignmentListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(ExprParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_updateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStatement" ):
                listener.enterUpdateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStatement" ):
                listener.exitUpdateStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStatement" ):
                return visitor.visitUpdateStatement(self)
            else:
                return visitor.visitChildren(self)




    def updateStatement(self):

        localctx = ExprParser.UpdateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_updateStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(ExprParser.UPDATE)
            self.state = 173
            self.tableReference()
            self.state = 174
            self.match(ExprParser.SET)
            self.state = 175
            self.assignmentList()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 176
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(ExprParser.AssignmentContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_assignmentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentList" ):
                listener.enterAssignmentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentList" ):
                listener.exitAssignmentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentList" ):
                return visitor.visitAssignmentList(self)
            else:
                return visitor.visitChildren(self)




    def assignmentList(self):
